--- a/amplify/backend/auth/ThreeTierAppSamples/ThreeTierAppSamples-cloudformation-template.yml
+++ b/amplify/backend/auth/ThreeTierAppSamples/ThreeTierAppSamples-cloudformation-template.yml
@@ -238,7 +238,7 @@ Resources:
     Properties:
       RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
+        Version: 2012-10-17
         Statement:
           - Effect: Allow
             Principal:
@@ -294,7 +294,7 @@ Resources:
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
-        Version: '2012-10-17'
+        Version: 2012-10-17
         Statement:
           - Effect: Allow
             Action:
